Enable security tests on aliases